--- a/public/Css/create.css
+++ b/public/Css/create.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     background-color: #e0e7ff;
     margin: 0;
     padding: 0;
@@ -33,6 +33,15 @@ label {
     display: block;
     margin-bottom: 5px;
     color: #555;
+}
+
+select {
+    width: 99%;
+    padding: 12px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: border-color 0.3s;
 }
 
 input[type="number"],
