--- a/public/Css/index.css
+++ b/public/Css/index.css
@@ -12,7 +12,8 @@ table {
     background: #ffffff;
 }
 
-th, td {
+th,
+td {
     padding: 12px;
     text-align: left;
     border: 1px solid #ddd;
@@ -69,22 +70,19 @@ button:hover {
     transition: background-color 0.3s;
 }
 
+.deduct-button {
+    background-color: #c82333;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 .add-button:hover {
     background-color: #218838;
 }
 
-.deduct-all-form {
-            text-align: center;
-            margin: 20px 0;
-        }
-        input[type="number"] {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 200px;
-            margin-right: 10px;
-        }
-        input[type="number"]:focus {
-            border-color: #007bff;
-            outline: none;
-        }
+.deduct-button:hover {
+    background-color: #ac0707;
+}
